# idili-tauri

./: .gitignore  Cargo.toml  Makefile.toml  Trunk.toml  index.html
.store/protected/: insecure_keyring
.store/table/: 1J9HCYQ2-EyM4-2_S4ZUO6Hu-tys6xt9zddnqQciMGU  JYsvFqgDDqvpe39hIAvtwtZ4_n2NEG-4HZwjZoLEQgI  R0JbirUUTQjdQNqUg0GgZ4ig24lzjJvzrfv1egV28Iw  Tlx7Gx4w7qpGQE7fjuNKcqkAKhtQv9WCEhE2M4VXEtM  UeTRMh5bz-I2_nd9UG33lWjN8GZvUVhGWbqsVGm0YNY  __veilid_all_tables  hHYaBJ1Z4ic7nBOgNKBwHEOH7JtG_VUHR3fEYtBc6t0  jCaAwJ3R0tDePzbRN-SciIX_il73cqeSfIQbMmeZIfk  vkE02tkWiayqj53IoS9c9t_HLrnl2DADOIA74-JMkvE
schemas/: contacts.capnp  idili.capnp  photos.capnp  setup.capnp
src/: app.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.old
src-tauri/src/: lib.rs  main.rs
