[package]
name = "idili-tauri-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.0-beta", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
thaw = { git = "https://github.com/thaw-ui/thaw", features = ["csr", "nightly"] }
icondata = "0.3.1"

[workspace]
members = ["src-tauri"]
