[package]
name = "idili-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idili_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git" }
lazy_static = "1.5.0"
md5 = "0.7.0"
schemars = "0.8.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
jni = "0.21.1"
